# rag-matic

./: .gitignore  Dockerfile  Dockerfile.celery  README.md  doc.txt  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: urls.py
app/migrations/: 0001_initial.py  0002_file_weaviate_ids.py  0003_alter_file_weaviate_ids.py  0004_file_sample_questions.py  0005_alter_file_sample_questions.py  0006_alter_file_sample_questions.py
app/models/: files.py
app/serializers/: __init__.py  files.py
app/tasks/: generate_embeddings.py  query.py
app/utils/: chunk_generator.py  embeddings.py  parsers.py  s3.py
app/views/: __init__.py  files.py  query.py  upload.py
config/: celery.py  settings.py  urls.py
devops/: docker-compose.yml
devops/celery/: Dockerfile.celery
devops/django/: Dockerfile
devops/rabbitmq/: docker-compose.yml  rabbitmq.conf
scripts/: delete_all_files.py  test_weaviate.py
secrets/: MyKeyPair.pem  rag-matic-backend-dev-ssh.pem  script.sh
